# my-website

./: .flake8  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: check.yml
webapp/main/: views.py
webapp/webapp/: settings.py  urls.py
