[tool.poetry]
name = "my-website"
version = "0.1.0"
description = ""
authors = ["AlnurT <alnur.tazhbenov@mail.ru>"]
readme = "README.md"
packages = [{include = "my_website"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.2"
black = "^23.3.0"
isort = "^5.12.0"

[tool.black]
include = '\.pyi?$'
exclude = 'venv'

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore=true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
