[tool.poetry]
name = "my-website"
version = "0.1.0"
description = ""
authors = ["AlnurT <alnur.tazhbenov@mail.ru>"]
readme = "README.md"
packages = [{include = "my_website"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.5.9"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.12.0"
flake8-mutable = "^1.2.0"
flake8-print = "^5.0.0"
flake8-pytest-style = "^1.7.2"
flake8-return = "^1.2.0"
pep8-naming = "^0.13.3"

[tool.black]
include = '\.pyi?$'
exclude = 'venv'

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore=true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
